# dog-project

./: .gitattributes  .gitignore  LOCAL_DEVELOPMENT.md  README.md  docker-compose.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  check_models.py  pyproject.toml
backend/api/: models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/chat/: models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: .env  .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: chat.js
frontend/src/components/: ChatDrawer.vue  ChatHistory.vue  FavoriteList.vue  RandomDog.vue  ThemeToggle.vue  TypewriterText.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  chatStore.js
frontend/src/utils/: api.js
frontend/src/views/: FavoritesView.vue  HomeView.vue  LoginView.vue  ProfileView.vue  RegisterView.vue
筆記/: 02_Django_REST_Framework_API_設計.md  06_專案架構與開發流程.md
筆記/Docker_容器化基礎與常用指令手冊/: 01_容器化技術核心觀念.md  02_Docker 三大核心組件.md  03_實戰 Dockerfile 解析.md  04_Docker Compose 多容器編排.md  05_常用指令工具手冊 (Cheat Sheet).md  06_開發環境與生產環境的差異.md
筆記/FullStack_全棧開發與系統架構/: 00_從無到有：全棧專案開發實戰全攻略.md  01_Django_ORM_與模型設計.md  02_Django_REST_Framework_API_設計.md  03_Vue3_基礎與組件化.md  04_Vue_Router_與路由管理.md  05_前後端交互與API調用.md  06_系統架構與專案結構概覽.md
