[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth>=5.0.2",
    "django>=6.0.2",
    "django-allauth>=65.14.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "google-genai>=1.64.0",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
]
